LIST OF CHANGES
---------------

release 52.0.5
 - bug fix in npg_run_is_deletable: stop using unsupported options
   for npg_pipeline::cache
 - npg_run_is_deletable should not expect adapter qc results for a
   pool, the source files do not exist since release 52.0
 - add log archiver to the end of the archival pipeline
 - use outgoing paths for jobs which are run after the run_qc_complete
   function; this patch also fixes the log file path for lsf_end job of
   the archival pipeline, which previously was always in outgoing

release 52.0.4
 - bug fix: change path for a file with LSF commands to a path in
   outgoing for jobs that run after the run was moved to the outgoing
   directory

release 52.0.3
 - bug fix: use analysis_path instaed of bam_basecall_path in a method
   that is used by both analysis and archival pipelines; the value of
   bam_basecall_path is available only when explicitly set, ie only
   in the analysis pipeline

release 52.0.2
 - allocate more memory to sequence_error and insert_size autoqc
   checks since they now use newer bwa, which creates twice larger
   reference index

release 52.0.1
 - alignment of tag#0 not done by default (align_tag0 flag added)

release 52.0
 - remove dependency of tests of LIMs XML, use samplesheet instead
 - remove dependency on tracking XML feeds
 - update p4 stage1 default values in general_values.ini
     restored p4_stage1_split_threads_count=4
 - removed illumina_basecall_stats function and associated code
 - remove generation of empty fastq and fastqcheck files
 - removed bam2fastqcheck_and_cached_fastq function
 - removed create_archive_directory function, scaffolding the runfolder
   is called in the beginning of the pipeline within the 'prepare'
   method of the analysis pipeline
 - increased number of threads for p4 stage1 (newer bambi version required)
 - added LSF-independent evaluation for number of threads
 - removed redundant dependency on illumina2bam jars