@@ -6,7 +6,7 @@ use namespace::autoclean;
 use Carp;
 use Try::Tiny;
 use Graph::Directed;
-use File::Spec::Functions;
+use File::Spec::Functions qw{catfile splitpath};
 use Class::Load qw{load_class};
 use File::Slurp;
 use JSON qw{from_json};
@@ -135,7 +135,7 @@ sub _build_function_list {
       $suffix .= "_$flag";
     }
   }
-  return $self->pipeline_name . $suffix;
+  return $self->_pipeline_name . $suffix;
 }
 around q{function_list} => sub {
   my $orig = shift;
@@ -151,10 +151,10 @@ around q{function_list} => sub {
     try {
       $file = $self->conf_file_path((join q[_],'function_list',$v) . $FUNCTION_DAG_FILE_TYPE);
     } catch {
-      my $pipeline_name = $self->pipeline_name;
+      my $pipeline_name = $self->_pipeline_name;
       if ($v !~ /^$pipeline_name/smx) {
         $file = $self->conf_file_path(
-          (join q[_],'function_list',$self->pipeline_name,$v) . $FUNCTION_DAG_FILE_TYPE);
+          (join q[_],'function_list',$self->_pipeline_name,$v) . $FUNCTION_DAG_FILE_TYPE);
       } else {
         $self->logcroak($_);
       }
@@ -194,7 +194,7 @@ sub _build_function_graph {
     push @functions, $END_FUNCTION;
     $self->info(q{Function order to be executed: } .
                 join q[, ], @functions);
-    ###$self->function_definitions->{'function_order'} = \@functions;
+
     my $current = 0;
     my $previous = 0;
     my $total = scalar @functions;
@@ -209,7 +209,6 @@ sub _build_function_graph {
     @nodes = map { {'id' => $_, 'label' => $_} } @functions;
   } else {
     my $jgraph = $self->_function_list_conf();
-    ###$self->function_definitions->{'function_graph'} = $jgraph;
     foreach my $e (@{$jgraph->{'graph'}->{'edges'}}) {
       ($e->{'source'} and $e->{'target'}) or
 	$self->logcroak(q{Both source and target should be defined for an edge});
@@ -412,6 +411,20 @@ has q{_script_name} => (
   init_arg => undef,
 );
 
+has q{_pipeline_name} => (
+  isa        => q{Str},
+  is         => q{ro},
+  lazy_build => 1,
+  init_arg   => undef,
+  metaclass  => q{NoGetopt},
+);
+sub _build__pipeline_name {
+  my $self = shift;
+  my ($volume, $directories, $name) = splitpath($self->_script_name);
+  $name =~ s/\Anpg_pipeline_//xms;
+  return $name;
+}
+
 has q{_output_file_name_root} => (
   isa        => q{Str},
   is         => q{ro},
@@ -529,7 +542,7 @@ sub _run_function {
   # method whose name we received from the registry, return
   # the result.
   #    
-  return $module->new($attrs)->$method_name();
+  return $module->new($attrs)->$method_name($self->_pipeline_name);
 }
 
 sub _schedule_functions {
@@ -565,8 +578,6 @@ sub _schedule_functions {
     }
     $self->function_definitions->{$function} = $definitions;
   }
-
-  ###$self->function_definitions->{'topological_function_order'} = \@functions;
 
   return;
 }
